# DesignPatterns

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  ReadMe.md  crtp_main.cpp  observer_main.cpp  other_decorator_app.cpp  strategy_main.cpp  type_erasure_app.cpp  visitor_main.cpp
